--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 			<td>{{priceUsd}}</td>
 			<td>{{marketCapUsd}}</td>
 			<td>{{volumeUsd24Hr}}</td>
-			<td><button class="button btn-primary coins-info-btn">More info</button></td>
+			<td><button class="coins-info-btn button btn-primary " id="{{id}}">More info</button></td>
 		</tr>
 		{{/data}}
 	</template>
 	
         <!-- jQuery -->
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<!-- Bootstrap -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
 		<!-- Mustache JS -->
